--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,14 +6,14 @@ repos:
       - id: black
         args: [--check]
         python_version: python3.6
-        files: ^(config)\.py$
+        files: ^(manage|config/.*)\.py$
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.2.3
     hooks:
       - id: flake8
         args: [--max-line-length=88]
-        files: ^(config)\.py$
+        files: ^(manage|config/.*)\.py$
 
   - repo: https://github.com/adrienverge/yamllint
     rev: master
