--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,13 @@ repos:
       - id: black
         args: [--check]
         python_version: python3.6
-        files: ^(manage|config/.*)\.py$
+        files: ^.*\.py$
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.2.3
     hooks:
       - id: flake8
-        args: [--max-line-length=88]
+        args: [--max-line-length=88, --ignore=F405]
         files: ^(manage|config/.*)\.py$
 
   - repo: https://github.com/adrienverge/yamllint
