--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     rev: v1.2.3
     hooks:
       - id: flake8
-        args: [--max-line-length=88, --ignore=F405]
+        args: [--max-line-length=88, --ignore=F405 E501]
         files: ^.*\.py$
 
   - repo: https://github.com/adrienverge/yamllint
